📄 [composer] Add GPL-2.0-or-later license to composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "esoul/laravel-ott-jwt",
   "description": "OTT JWT package for Laravel",
   "type": "library",
+  "license": "GPL-2.0-or-later",
   "authors": [
     {
       "name": "Tomáš Vojík",
