:truck: [composer] Rename OttJwtServiceProvider to JwtServiceProvider

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Esoul\\OttJwt\\OttJwtServiceProvider"
+        "Esoul\\OttJwt\\JwtServiceProvider"
       ],
       "aliases": {
         "JwtParser": "Esoul\\OttJwt\\Facades\\JwtParser"
